--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "cardfolio-ebay-webhook",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "dotenv": "^16.4.5"
+    "express": "^5.1.0"
   }
 }
